--- a/themes/juntosmovemos/layouts/juntosmovemos.htm
+++ b/themes/juntosmovemos/layouts/juntosmovemos.htm
@@ -28,6 +28,7 @@ public function onLogout(){
 <html>
     <head>
         {% partial 'Header/head' %}
+        {% styles %}
     </head>
     <body>
         <div id="wrapper"   >
